[tool.poetry]
name = "dagster-nomad-example"
version = "0.0.0.post2.dev0+3f759bf"
description = "Example project to run dagster and launch a job in nomad"
authors = [
    "Bruno Bonfils <asyd@asyd.net>",
    "Thomas Aubry <github.thomaub@gmail.com>",
    "Thomas Berdy <thomas.berdy@outlook.com>"
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dagster = "^1.4.7"
dagster-aws = "^0.20.7"
dagster-nomad = {path = "dagster-nomad", develop = true}
dagster-postgres = "^0.20.7"
dagster-webserver = "^1.4.7"
httpx = "^0.24.1"
pandas = "^2.0.3"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
  )/
'''

[tool.ruff]
line-length = 120
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]
