[project]
name = "dagster-nomad-demo"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "dagster-aws~=0.20",
    "dagster~=1.9.2",
    "dagster-postgres~=0.20",
    "dagster-webserver~=1.9.2",
    "httpx~=0.24.1",
    "dagster-nomad",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
  )/
'''

[tool.ruff]
line-length = 120
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]

[tool.uv.workspace]
members = [
    "dagster-nomad",
]

[tool.uv.sources]
dagster-nomad = { workspace = true }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pandas>=2.2.3",
    "rich>=14.0.0",
    "ruff>=0.11.6",
]
