[tool.poetry]
name = "dagster-nomad"
version = "0.0.1"
description = "Dagster integration library for Nomad"
authors = [
    "Bruno Bonfils <asyd@asyd.net>",
    "Thomas Aubry <github.thomaub@gmail.com>",
    "Thomas Berdy <thomas.berdy@outlook.com>"
]
readme = "README.md"
packages = [{include = "dagster_nomad"}]
repository = "https://github.com/paylead/dagster-nomad"
keywords = [
    "dagster",
    "nomad",
    "run launcher",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.3.5"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.272"
pyright = "^1.1.313"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
strict = false
vcs = "git"
style = "pep440"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = [
    "pyproject.toml",
    "dagster_nomad/__version__.py"
]

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
  )/
'''

[tool.ruff]
line-length = 120
src = [
    "dagster_nomad",
    "tests"
]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.isort]
known-first-party = ["dagster_nomad", "tests"]

[tool.pyright]
reportPropertyTypeMismatch = true
reportImportCycles = true
reportWildcardImportFromLibrary = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true

include = [
    "dagster_nomad`",
    "tests"
]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]