[project]
name = "dagster-nomad"
version = "0.0.1"
description = "Dagster integration library for Nomad"
readme = "README.md"
authors = [
    "Bruno Bonfils <asyd@asyd.net>",
    "Thomas Aubry <github.thomaub@gmail.com>",
    "Thomas Berdy <thomas.berdy@outlook.com>"
]
packages = [{include = "dagster_nomad"}]
repository = "https://github.com/paylead/dagster-nomad"
keywords = [
    "dagster",
    "nomad",
    "run launcher",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.9.13",
    "httpx>=0.24.1",
]

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
  )/
'''

[tool.ruff]
line-length = 120
src = [
    "dagster_nomad",
    "tests"
]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]

[tool.lint.isort]
known-first-party = ["dagster_nomad", "tests"]

[tool.pyright]
reportPropertyTypeMismatch = true
reportImportCycles = true
reportWildcardImportFromLibrary = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true

include = [
    "dagster_nomad`",
    "tests"
]

exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]

